changes to styling, added in scroll snap, fixed some styling issues, some devices the projects section was overflowing so added a overflow scroll

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,6 +1,7 @@
 .contact__container h4 {
     margin-top: 2rem;
     text-align: center;
+    margin-bottom: 2rem;
 }
 
 .btton {
