--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,8 +1,4 @@
 header {
-    margin-top: 5rem;
-    height: calc(100vh - 5rem);
-    display: grid;
-    place-items: center;
     background: white;
     transition: var(--transition);
 }
@@ -15,7 +11,6 @@ small {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
 }
 
 /* .header__profile {
@@ -69,7 +64,6 @@ width: 20rem;
 @media screen and (max-width: 1024px) {
     header {
         margin-top: 0;
-        height: 100vh;
     }
 }
 
